Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -202,6 +202,33 @@
     ]
   },
   {
+    "title": "Máy bay lao thẳng xuống đất khi biểu diễn, phi công tử nạn ở Nam Phi",
+    "content": "Vào ngày 22/3, một phi công tên James O'Connell đã tử vong khi máy bay Impala Mark 1 của ông rơi xuống đất trong buổi biểu diễn ở triển lãm hàng không Bờ Tây tại Saldanha, Nam Phi. Máy bay đã đâm mạnh xuống bãi cỏ mà không có dấu hiệu phi công cố gắng thoát ra. Dù không có thương vong nào xảy ra trong số khán giả, Cục Hàng không Dân dụng Nam Phi đang tiến hành điều tra nguyên nhân vụ tai nạn này. O'Connell là một phi công lão luyện với hơn 36 năm kinh nghiệm trong ngành hàng không.",
+    "link": "https://dantri.com.vn/the-gioi/may-bay-lao-thang-xuong-dat-khi-bieu-dien-phi-cong-tu-nan-o-nam-phi-20250324183218847.htm",
+    "cat": "the-gioi",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tại sao phi công James O'Connell lại tử nạn ở Nam Phi?",
+    "answers": [
+      {
+        "text": "Máy bay của ông đã rơi trong buổi biểu diễn.",
+        "correct": true
+      },
+      {
+        "text": "Ông bị tai nạn giao thông trên đường đến sự kiện.",
+        "correct": false
+      },
+      {
+        "text": "Ông bị bệnh đột ngột trong lúc bay.",
+        "correct": false
+      },
+      {
+        "text": "Máy bay của ông bị lỗi kỹ thuật trước khi cất cánh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Việt Nam đặt mục tiêu một triệu sinh viên ngành STEM năm 2030",
     "content": "Việt Nam đặt mục tiêu đạt một triệu sinh viên theo học các ngành STEM vào năm 2030, theo thông báo của Bộ trưởng Giáo dục và Đào tạo Nguyễn Kim Sơn. Mặc dù hiện tại tỷ lệ sinh viên theo học các ngành STEM chỉ khoảng 28-30%, chính phủ đang có kế hoạch phát triển nguồn nhân lực chất lượng cao trong lĩnh vực này để đáp ứng nhu cầu phát triển kinh tế xã hội. Các chính sách khuyến khích và hỗ trợ học bổng sẽ được triển khai nhằm thu hút sinh viên tham gia vào các lĩnh vực khoa học, công nghệ, kỹ thuật và toán học.",
     "link": "https://vnexpress.net/viet-nam-dat-muc-tieu-mot-trieu-sinh-vien-nganh-stem-nam-2030-4865280.html",
@@ -251,6 +278,33 @@
       },
       {
         "text": "Tăng cường quảng cáo sản phẩm mới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thai phụ uống cacao được không?",
+    "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
+    "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Thai phụ có nên uống cacao không?",
+    "answers": [
+      {
+        "text": "Có, nếu uống với liều lượng vừa phải.",
+        "correct": true
+      },
+      {
+        "text": "Không, cacao không tốt cho thai phụ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên uống cacao vào buổi tối.",
+        "correct": false
+      },
+      {
+        "text": "Cacao có thể gây hại cho thai nhi.",
         "correct": false
       }
     ]
@@ -434,28 +488,28 @@
     ]
   },
   {
-    "title": "Robinho làm gì trong năm đầu ngồi tù",
-    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
-    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
-    "cat": "phap-luat",
-    "positivity": 4,
+    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
+    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
+    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
+    "cat": "giai-tri",
+    "positivity": 5,
     "importance": 7,
-    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
+    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
     "answers": [
       {
-        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
+        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
         "correct": true
       },
       {
-        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
+        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
         "correct": false
       },
       {
-        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
+        "text": "Vì phim không đạt được rating cao.",
         "correct": false
       },
       {
-        "text": "Anh ấy không làm gì cả.",
+        "text": "Vì anh không hợp với vai diễn.",
         "correct": false
       }
     ]
@@ -546,28 +600,28 @@
     ]
   },
   {
-    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
-    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
-    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
-    "cat": "giai-tri",
-    "positivity": 5,
+    "title": "Robinho làm gì trong năm đầu ngồi tù",
+    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
+    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
+    "cat": "phap-luat",
+    "positivity": 4,
     "importance": 7,
-    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
+    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
     "answers": [
       {
-        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
+        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
         "correct": true
       },
       {
-        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
+        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
         "correct": false
       },
       {
-        "text": "Vì phim không đạt được rating cao.",
+        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
         "correct": false
       },
       {
-        "text": "Vì anh không hợp với vai diễn.",
+        "text": "Anh ấy không làm gì cả.",
         "correct": false
       }
     ]
@@ -1481,33 +1535,6 @@
     ]
   },
   {
-    "title": "Mụn lưng có thể chữa khỏi không?",
-    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
-    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Mụn lưng có thể chữa khỏi được không?",
-    "answers": [
-      {
-        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, mụn lưng không bao giờ khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
     "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
     "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
@@ -1530,6 +1557,33 @@
       },
       {
         "text": "Để giảm tiếng ồn trong xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mụn lưng có thể chữa khỏi không?",
+    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
+    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Mụn lưng có thể chữa khỏi được không?",
+    "answers": [
+      {
+        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, mụn lưng không bao giờ khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
         "correct": false
       }
     ]
@@ -2331,33 +2385,6 @@
     ]
   },
   {
-    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
-    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
-    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
-    "answers": [
-      {
-        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
-        "correct": true
-      },
-      {
-        "text": "Cháo thịt, cơm trắng, bánh mì",
-        "correct": false
-      },
-      {
-        "text": "Thịt bò, cá, trứng",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, snack, kẹo",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
     "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
     "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
@@ -2380,6 +2407,33 @@
       },
       {
         "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
+    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
+    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
+    "answers": [
+      {
+        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
+        "correct": true
+      },
+      {
+        "text": "Cháo thịt, cơm trắng, bánh mì",
+        "correct": false
+      },
+      {
+        "text": "Thịt bò, cá, trứng",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, snack, kẹo",
         "correct": false
       }
     ]
@@ -4706,33 +4760,6 @@
       },
       {
         "text": "Bất động sản Phát Đạt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao bạn thèm đồ ngọt sau bữa ăn",
-    "content": "Sau bữa ăn, nhiều người thường cảm thấy thèm đồ ngọt, hiện tượng này được giải thích bởi khoa học là do não kích thích cơn thèm ăn thông qua các tế bào thần kinh POMC. Nghiên cứu cho thấy, khi đã ăn no, não vẫn có thể tạo ra cảm giác thèm đồ ngọt nhờ vào việc giải phóng beta-endorphin, một chất hóa học gây khoái cảm. Để thỏa mãn cơn thèm ăn, có thể lựa chọn các món ngọt lành mạnh như chocolate hay trái cây, và nhai kẹo cao su không đường cũng là một cách hữu ích để kiểm soát cơn thèm ăn.",
-    "link": "https://vnexpress.net/vi-sao-ban-them-do-ngot-sau-bua-an-4864799.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao chúng ta thường thèm đồ ngọt sau bữa ăn?",
-    "answers": [
-      {
-        "text": "Vì não kích thích cơn thèm ăn đồ ngọt khi đã no.",
-        "correct": true
-      },
-      {
-        "text": "Do ăn uống không đủ dinh dưỡng.",
-        "correct": false
-      },
-      {
-        "text": "Vì đồ ngọt có vị ngon hơn các món khác.",
-        "correct": false
-      },
-      {
-        "text": "Do thói quen ăn uống không lành mạnh.",
         "correct": false
       }
     ]
