Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "HLV Kluivert: 'Indonesia sẽ tấn công từ đầu để hạ Bahrain'",
+    "content": "HLV Patrick Kluivert của đội tuyển Indonesia tuyên bố sẽ tấn công từ đầu để giành chiến thắng trước Bahrain trong trận đấu vào ngày 25/3 tới đây, sau thất bại nặng nề 1-5 trước Australia. Mặc dù chịu nhiều chỉ trích sau trận thua, Kluivert khẳng định các cầu thủ vẫn giữ vững tinh thần và tự tin vào khả năng giành chiến thắng. Ông cũng cho rằng việc Bahrain vừa thua Nhật Bản 0-2 sẽ là lợi thế cho Indonesia.",
+    "link": "https://vnexpress.net/hlv-kluivert-indonesia-se-tan-cong-tu-dau-de-ha-bahrain-4865354.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "HLV Kluivert có kế hoạch gì cho trận đấu với Bahrain?",
+    "answers": [
+      {
+        "text": "Tấn công từ đầu để giành chiến thắng",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tập trung phòng thủ và chờ cơ hội",
+        "correct": false
+      },
+      {
+        "text": "Thay đổi toàn bộ đội hình",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế số bàn thua tối đa",
+        "correct": false
+      },
+      {
+        "text": "Chỉ chơi trong hiệp 2",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bánh mì Hawaii của ông chủ Việt kiều Mỹ",
     "content": "Ông Vương Hoàng Minh, một Việt kiều Mỹ, đã khởi xướng mô hình bánh mì Hawaii tại Lễ hội bánh mì 2025 ở TP.HCM. Mô hình này không yêu cầu vốn đầu tư và không có rủi ro cho những người tham gia, với mục tiêu tạo việc làm và giữ gìn hương vị bánh mì truyền thống. Bánh mì Hawaii sẽ được phát triển thành chuỗi cửa hàng bán bánh mì vỉa hè, phục vụ cho học sinh và người lao động, với giá khoảng 25.000 đồng mỗi ổ.",
     "link": "https://tuoitre.vn/banh-mi-hawaii-cua-ong-chu-viet-kieu-my-20250324183132429.htm",
@@ -488,28 +519,28 @@
     ]
   },
   {
-    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
-    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
-    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
-    "cat": "giai-tri",
-    "positivity": 5,
+    "title": "Robinho làm gì trong năm đầu ngồi tù",
+    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
+    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
+    "cat": "phap-luat",
+    "positivity": 4,
     "importance": 7,
-    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
+    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
     "answers": [
       {
-        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
+        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
         "correct": true
       },
       {
-        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
+        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
         "correct": false
       },
       {
-        "text": "Vì phim không đạt được rating cao.",
+        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
         "correct": false
       },
       {
-        "text": "Vì anh không hợp với vai diễn.",
+        "text": "Anh ấy không làm gì cả.",
         "correct": false
       }
     ]
@@ -573,6 +604,33 @@
     ]
   },
   {
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
+    "answers": [
+      {
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ người dân mới được hưởng lợi.",
+        "correct": false
+      },
+      {
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
+        "correct": false
+      },
+      {
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chạy bộ có phải môn thể thao cho người giàu?",
     "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
     "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
@@ -600,55 +658,28 @@
     ]
   },
   {
-    "title": "Robinho làm gì trong năm đầu ngồi tù",
-    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
-    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
-    "cat": "phap-luat",
-    "positivity": 4,
+    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
+    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
+    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
+    "cat": "giai-tri",
+    "positivity": 5,
     "importance": 7,
-    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
+    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
     "answers": [
       {
-        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
+        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
         "correct": true
       },
       {
-        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
+        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
         "correct": false
       },
       {
-        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
+        "text": "Vì phim không đạt được rating cao.",
         "correct": false
       },
       {
-        "text": "Anh ấy không làm gì cả.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sức bật từ hệ sinh thái số liên ngành",
-    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
-    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
-    "answers": [
-      {
-        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ người dân mới được hưởng lợi.",
-        "correct": false
-      },
-      {
-        "text": "Doanh nghiệp không có cơ hội phát triển.",
-        "correct": false
-      },
-      {
-        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "text": "Vì anh không hợp với vai diễn.",
         "correct": false
       }
     ]
@@ -4174,37 +4205,6 @@
     ]
   },
   {
-    "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
-    "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
-    "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Nguyễn Nguyệt đã giảm bao nhiêu kg trong quá trình thay đổi chế độ ăn uống?",
-    "answers": [
-      {
-        "text": "27 kg",
-        "correct": true
-      },
-      {
-        "text": "15 kg",
-        "correct": false
-      },
-      {
-        "text": "35 kg",
-        "correct": false
-      },
-      {
-        "text": "20 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
     "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
     "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
@@ -4254,6 +4254,37 @@
       },
       {
         "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
+    "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
+    "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Nguyễn Nguyệt đã giảm bao nhiêu kg trong quá trình thay đổi chế độ ăn uống?",
+    "answers": [
+      {
+        "text": "27 kg",
+        "correct": true
+      },
+      {
+        "text": "15 kg",
+        "correct": false
+      },
+      {
+        "text": "35 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
         "correct": false
       }
     ]
@@ -4402,28 +4433,28 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
-    "cat": "thoi-su",
+    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
+    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
+    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
+    "cat": "suc-khoe",
     "positivity": 7,
     "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
     "answers": [
       {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "text": "Trở thành công an hoặc bác sĩ",
         "correct": true
       },
       {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "text": "Trở thành họa sĩ",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào đáng kể",
+        "text": "Trở thành cầu thủ bóng đá",
         "correct": false
       },
       {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "text": "Trở thành nhạc sĩ",
         "correct": false
       }
     ]
@@ -4456,28 +4487,28 @@
     ]
   },
   {
-    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
-    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
-    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
-    "cat": "suc-khoe",
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "cat": "thoi-su",
     "positivity": 7,
     "importance": 8,
-    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
     "answers": [
       {
-        "text": "Trở thành công an hoặc bác sĩ",
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
         "correct": true
       },
       {
-        "text": "Trở thành họa sĩ",
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
         "correct": false
       },
       {
-        "text": "Trở thành cầu thủ bóng đá",
+        "text": "Không có sự thay đổi nào đáng kể",
         "correct": false
       },
       {
-        "text": "Trở thành nhạc sĩ",
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
