--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Cựu trưởng ban quản trị chung cư Miếu Nổi gây thiệt hại 637 triệu đồng, tham ô 2,5 tỉ đồng",
+    "content": "Ông Phạm Phương, cựu trưởng ban quản trị chung cư Miếu Nổi, cùng các đồng phạm đã gây thiệt hại cho cư dân hơn 637 triệu đồng và tham ô gần 2,5 tỉ đồng. Cơ quan điều tra xác định họ đã lợi dụng chức vụ để thực hiện các hành vi tham ô tài sản như ký hợp đồng thi công không đúng quy định và sử dụng tiền đóng góp của cư dân cho mục đích cá nhân. Vụ việc đã gây ra nhiều hệ lụy cho người dân sống tại chung cư này.",
+    "link": "https://tuoitre.vn/cuu-truong-ban-quan-tri-chung-cu-mieu-noi-gay-thiet-hai-637-trieu-dong-tham-o-2-5-ti-dong-20250324190035108.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Ông Phạm Phương đã gây thiệt hại bao nhiêu cho cư dân chung cư Miếu Nổi?",
+    "answers": [
+      {
+        "text": "637 triệu đồng",
+        "correct": true
+      },
+      {
+        "text": "500 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "1 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "1,5 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "2 tỉ đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "HLV Kluivert: 'Indonesia sẽ tấn công từ đầu để hạ Bahrain'",
     "content": "HLV Patrick Kluivert của đội tuyển Indonesia tuyên bố sẽ tấn công từ đầu để giành chiến thắng trước Bahrain trong trận đấu vào ngày 25/3 tới đây, sau thất bại nặng nề 1-5 trước Australia. Mặc dù chịu nhiều chỉ trích sau trận thua, Kluivert khẳng định các cầu thủ vẫn giữ vững tinh thần và tự tin vào khả năng giành chiến thắng. Ông cũng cho rằng việc Bahrain vừa thua Nhật Bản 0-2 sẽ là lợi thế cho Indonesia.",
     "link": "https://vnexpress.net/hlv-kluivert-indonesia-se-tan-cong-tu-dau-de-ha-bahrain-4865354.html",
@@ -479,6 +510,60 @@
     ]
   },
   {
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
+    "answers": [
+      {
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ người dân mới được hưởng lợi.",
+        "correct": false
+      },
+      {
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
+        "correct": false
+      },
+      {
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
+    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
+    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "answers": [
+      {
+        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "correct": true
+      },
+      {
+        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "correct": false
+      },
+      {
+        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "correct": false
+      },
+      {
+        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Huyết áp của bạn có bình thường không?",
     "content": "Huyết áp có thể bị ảnh hưởng bởi nhiều yếu tố như lối sống, cân nặng và giấc ngủ. Việc điều chỉnh những yếu tố này có thể giúp huyết áp trở về mức bình thường. Tuy nhiên, cũng có những nguyên nhân khác có thể dẫn đến tình trạng huyết áp cao bất thường. Do đó, việc theo dõi và kiểm tra huyết áp thường xuyên là rất quan trọng.",
     "link": "https://vnexpress.net/huyet-ap-cua-ban-co-binh-thuong-khong-4865191.html",
@@ -532,60 +617,6 @@
       },
       {
         "text": "Uống trà sữa giúp tăng cường chức năng thận.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sức bật từ hệ sinh thái số liên ngành",
-    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
-    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
-    "answers": [
-      {
-        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ người dân mới được hưởng lợi.",
-        "correct": false
-      },
-      {
-        "text": "Doanh nghiệp không có cơ hội phát triển.",
-        "correct": false
-      },
-      {
-        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
-    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
-    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
-    "answers": [
-      {
-        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
-        "correct": true
-      },
-      {
-        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
-        "correct": false
-      },
-      {
-        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
-        "correct": false
-      },
-      {
-        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
         "correct": false
       }
     ]
@@ -2349,33 +2380,6 @@
     ]
   },
   {
-    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
-    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
-    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
-    "answers": [
-      {
-        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
-        "correct": true
-      },
-      {
-        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
-        "correct": false
-      },
-      {
-        "text": "Vì giải chạy có nhiều runner tham gia.",
-        "correct": false
-      },
-      {
-        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
     "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
     "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
@@ -2398,6 +2402,33 @@
       },
       {
         "text": "Mì tôm, snack, kẹo",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
+    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
+    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
+    "answers": [
+      {
+        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
+        "correct": true
+      },
+      {
+        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
+        "correct": false
+      },
+      {
+        "text": "Vì giải chạy có nhiều runner tham gia.",
+        "correct": false
+      },
+      {
+        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
         "correct": false
       }
     ]
